--- a/themes/nostyleplease/assets/css/main.scss
+++ b/themes/nostyleplease/assets/css/main.scss
@@ -182,7 +182,7 @@ details[open] summary {
   align-items: center;
 }
 
-.w {
+.wow {
   max-width: 640px;
   margin: 0 auto;
   padding: 4rem 2rem;
