--- a/themes/nostyleplease/layouts/partials/head.html
+++ b/themes/nostyleplease/layouts/partials/head.html
@@ -13,10 +13,18 @@
   </title>
 
   <link rel="shortcut icon" type="image/x-icon" href="{{ $.Site.Params.favicon | relURL }}" />
+
+  <!-- general css -->
   {{ $options := (dict "outputStyle" "compressed" "enableSourceMap" (not hugo.IsProduction)) }}
   {{ $sass := resources.Get "css/main.scss" }}
   {{ $style := $sass | css.Sass $options | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink | relURL }}" integrity="{{ $style.Data.Integrity }}" />
+
+  <!-- syntax highlighting for codeblocks -->
+  {{ $syntaxOptions := (dict "outputStyle" "compressed") }}
+  {{ $syntax := resources.Get "css/syntax.css" | resources.Minify | resources.Fingerprint "sha512" }}
+  <link rel="stylesheet" href="{{ $syntax.Permalink | relURL }}" integrity="{{ $syntax.Data.Integrity }}" />
+
   {{ if .Params.mathjax }} {{ partial "mathjax.html" . }} {{ end }}
 
   <!-- Custom icons -->
