feat: ref build commit's hash in footer

--- a/themes/nostyleplease/layouts/partials/footer.html
+++ b/themes/nostyleplease/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-    <p><a href="http://golfed6fzytoktol4de4o4nerap3xuykhfm5makfzscib65df3khnpyd.onion/" target="_blank" rel="noopener noreferrer">.onion</a> // <a href="/contact.txt" target="_blank" rel="noopener noreferrer">contact.txt</a></p>
+    <p><a href="http://golfed6fzytoktol4de4o4nerap3xuykhfm5makfzscib65df3khnpyd.onion/" target="_blank" rel="noopener noreferrer">.onion</a> // <a href="/contact.txt" target="_blank" rel="noopener noreferrer">contact.txt</a> {{ if getenv "HUGO_COMMIT_HASH" }} // <a href="https://github.com/200ug/golfed.xyz" target="_blank" rel="noopener noreferrer">{{ getenv "HUGO_COMMIT_HASH" }}</a>{{ end }}</p>
 </footer>
