--- a/themes/nostyleplease/layouts/partials/footer.html
+++ b/themes/nostyleplease/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-    <p><a href="/contact.txt" target="_blank" rel="noopener noreferrer">contact.txt</a> // <a href="/xmr.txt" target="_blank" rel="noopener noreferrer">xmr.txt</a> {{ if getenv "HUGO_COMMIT_HASH" }} // <a href="https://github.com/200ug/golfed.xyz" target="_blank" rel="noopener noreferrer">{{ getenv "HUGO_COMMIT_HASH" }}</a>{{ end }}</p>
+    <p><a href="/xmr.txt" target="_blank" rel="noopener noreferrer">xmr.txt</a> / <a href="/contact.txt" target="_blank" rel="noopener noreferrer">contact.txt</a> {{ if getenv "HUGO_COMMIT_HASH" }} / <a href="https://github.com/200ug/golfed.xyz" target="_blank" rel="noopener noreferrer">{{ getenv "HUGO_COMMIT_HASH" }}</a>{{ end }}</p>
 </footer>
