--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,14 +2,15 @@
   <p class="mb-4 text-base relative flex justify-between">
     <span>
       {{ if getenv "HUGO_COMMIT_HASH" }}
-        <a
-          href="https://github.com/200ug/golfed.xyz/commit/{{ getenv "HUGO_COMMIT_HASH" }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          >{{ getenv "HUGO_COMMIT_HASH" }}</a>
+      <a
+        href="https://github.com/200ug/golfed.xyz/commit/{{ getenv "HUGO_COMMIT_HASH" }}"
+        target="_blank"
+        rel="noopener noreferrer"
+        >{{ getenv "HUGO_COMMIT_HASH" }}</a
+      >
       {{ else }}
-        <!-- placeholder for dev -->
-        <a href="#">fa5b21f</a>
+      <!-- placeholder for dev -->
+      <a href="#">fa5b21f</a>
       {{ end }}
     </span>
     <a
@@ -20,13 +21,15 @@
       >∆</a
     >
     <span>
-      <a href="/sitemap.xml" target="_blank" rel="noopener noreferrer">sitemap</a>
+      <a href="/sitemap.xml" target="_blank" rel="noopener noreferrer"
+        >sitemap</a
+      >
     </span>
   </p>
   <p class="text-xs text-[var(--accent)] pt-2">
     ALL IN THE GAME, YO. ALL IN THE GAME.
   </p>
   <p class="text-xs text-[var(--accent)]">
-    {{ time.Now | time.Format "Jan 2 2006" }}
+    δ: {{ time.Now | time.Format "Jan 2 2006" }}
   </p>
 </footer>
