--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,35 +1,14 @@
-<footer class="text-center">
-  <p class="mb-4 text-base relative flex justify-between">
-    <span>
-      {{ if getenv "HUGO_COMMIT_HASH" }}
-      <a
-        href="https://github.com/200ug/golfed.xyz/commit/{{ getenv "HUGO_COMMIT_HASH" }}"
-        target="_blank"
-        rel="noopener noreferrer"
-        >{{ getenv "HUGO_COMMIT_HASH" }}</a
-      >
-      {{ else }}
-      <!-- placeholder for dev -->
-      <a href="#">fa5b21f</a>
-      {{ end }}
-    </span>
-    <a
-      href="https://kopimi.com/"
-      target="_blank"
-      rel="noopener noreferrer"
-      class="absolute left-1/2 -translate-x-1/2"
-      >∆</a
-    >
-    <span>
-      <a href="/sitemap.xml" target="_blank" rel="noopener noreferrer"
-        >sitemap</a
-      >
-    </span>
-  </p>
-  <p class="text-xs text-[var(--accent)] pt-2">
-    ALL IN THE GAME, YO. ALL IN THE GAME.
-  </p>
-  <p class="text-xs text-[var(--accent)]">
-    δ: {{ time.Now | time.Format "Jan 2 2006" }}
-  </p>
+<footer class="max-w-4xl mx-auto px-4 pt-8 pb-18">
+  <div class="flex flex-col mx-auto items-center italic">
+    <img src="{{ .Site.Params.footerLogo }}" class="pb-6 w-32 brightness-145" />
+    <div class="flex gap-8">
+      <a href="/">home</a>
+      <a href="/connect">connect</a>
+      <a href="{{ .Site.Params.projectsLink }}">projects</a>
+      <a href="/stats">stats</a>
+    </div>
+    <p class="pt-4 text-sm lg:text-base">
+      {{ .Site.Params.footerText }}
+    </p>
+  </div>
 </footer>
