feat: local pgp key distribution

--- a/layouts/connect.html
+++ b/layouts/connect.html
@@ -3,8 +3,7 @@
     <ul class="inline-block text-left mx-auto">
       <li>
         pgp:
-        <a
-          href="https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x1530f5132a1228578d2b4168995efd5c1b532b3e"
+        <a href="/pgp.asc"
           ><span class="lg:hidden">1530F...32B3E</span>
           <span class="hidden lg:inline"
             >1530F5132A1228578D2B4168995EFD5C1B532B3E</span
